[tool.poetry]
name = "maraudersmap-tiles"
version = "0.1.0"
description = ""
authors = ["Mathias Oterhals Myklebust <mathias@oterbust.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
